--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,50 @@
-/* Todos los elementos de la página 
+
+/*ARIANA COLMENARES COHORTE 28
+
+Todos los elementos de la página 
 Tamaño de fuente: 16px
-Familia de fuentes:Arial, Helvetica, sans-serif;
+Familia de fuentes:Arial, Helvetica, sans-serif; */
 
-Todos los párrafos de la página 
-color: #555;
+* {font-size: 16px; 
+font-family: Arial, Helvetica, sans-serif;
+}
 
-Todos los párrafos contenidos en #primero 
-color: #369;
+/* Todos los párrafos de la página 
+color: #555;*/
 
-Todos los enlaces de la página 
-color: #C30;
+ p {color: #555;
+}
 
-Los elementos <em> contenidos en #primero 
+/*Todos los párrafos contenidos en #primero 
+color: #369;*/ 
+#primero p {color: #369;
+}
+
+/*Todos los enlaces de la página 
+color: #C30; HECHO*/ 
+a {
+  color: #c30;
+}
+
+/*Los elementos <em> contenidos en #primero 
 color: #0000BB;
-background-color: #FFFFCC;
+background-color: #FFFFCC;*/
+#primero em {
+  color: #0000BB;
+  background-color: #FFFFCC;
+}
 
-Todos los elementos <em> con la clase "especial" en toda la página 
+/*Todos los elementos <em> con la clase "especial" en toda la página 
 color: #FFFF00;
-background: #000000;
+background: #000000;*/
+.especial { 
+  color: #ffff00;
+  background: #000000;
+}
 
-Todos los elementos <span> contenidos en la clase "normal" 
+/*Todos los elementos <span> contenidos en la clase "normal" 
 font-weight: bold;
 */ 
+.normal span{
+  font-weight: bold;
+}
